--- a/src/main/resources/static/styles/blocks/_button.scss
+++ b/src/main/resources/static/styles/blocks/_button.scss
@@ -23,4 +23,9 @@
     background-color: var(--color-blue);
     color: var(--color-light);
   }
+
+  &--auth {
+    display: flex;
+    align-items: center;
+  }
 }
